--- a/SmartApparel/src/main/resources/application.properties
+++ b/SmartApparel/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.jpa.hibernate.ddl-auto=update
 spring.application.name=SmartApparel
+spring.datasource.url=jdbc:mysql://localhost:3306/smartapparel
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+
+
+
