--- a/SmartApparel/src/main/resources/application.properties
+++ b/SmartApparel/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=SmartApparel
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/SmartApparel
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql:true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
