--- a/SmartApparel/src/main/resources/application.properties
+++ b/SmartApparel/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=SmartApparel
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/SmartApparel?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
